# pairsnp

./: .travis.yml  README.md
R/pairsnp/: DESCRIPTION  NAMESPACE
R/pairsnp/R/: RcppExports.R  import_fasta_sparse.R  snp_dist.R  snp_similarity.R
R/pairsnp/man/: import_fasta_sparse.Rd  snp_dist.Rd  snp_similarity.Rd
R/pairsnp/src/: RcppExports.cpp  import_fasta_to_vector_each_nt.cpp
binaries/: pairsnp_linux_64bit  pairsnp_mac_64bit
cpp/: Makefile  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
cpp/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cpp/src/: Makefile  Makefile.am  Makefile.in  main.cpp
python/pairsnp/: LICENSE  README.md  pairsnp.py  setup.py
